Finally got blueprint and authorization working but yet to be tested

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,5 +1,5 @@
-pip install flask
-pip install sqlalchemy
-pip install bcrypt
-pip install -U flask-cors
-pip install flask-jwt-extended
+flask
+sqlalchemy
+bcrypt
+flask-cors
+flask-jwt-extended
