--- a/Frontend/einventorymanager/package.json
+++ b/Frontend/einventorymanager/package.json
@@ -44,6 +44,7 @@
     "@tanstack/react-table": "^8.11.7",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.1",
     "checkbox": "^0.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -55,6 +56,7 @@
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
