--- a/Frontend/einventorymanager/package.json
+++ b/Frontend/einventorymanager/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.11.7",
     "@types/bcryptjs": "^2.4.6",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.1",
     "checkbox": "^0.0.1",
@@ -51,6 +52,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "express": "^4.18.2",
     "lucide-react": "^0.316.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
