--- a/Frontend/einventorymanager/package.json
+++ b/Frontend/einventorymanager/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.316.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.5",
@@ -75,6 +76,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
